--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -75,6 +75,8 @@ This applies to CUs and years when there were counts in some streams in the CU i
 
 Infilling by stream typically made up a small proportion of the total escapement for each CU, with the exception of Howe Sound-Burrard Inlet. This was partly due to increasing escapements in the Cheakamus River and Indian River since 2000. 
 
+This method assumes that escapement among streams is correlated, which is not always the case (can have figure in appendix or quote correlation values). 
+
 ##### Infilling by CU
 
 If there were no counts of any streams in a CU in a given year, a second round of infilling was done with data set that had already been infilled by stream. This was the case for two CUs: Upper Knight (22 years: 1979-1980, 1982, 1984, 1989, 1991,1996,2004-18) and Bute Inlet (13 years: 2005-2006, 2008-2018). 
@@ -176,6 +178,8 @@ These methods used 5 CUs with over 50 years of data (Bute Inlet and Upper Knight
 The first approach uses $S_{gen}$ as a benchmark, which is derived from the parameters of the Ricker model of recruitment.
 
 The second approach uses a percentile of past spawner abundance as a benchmark. 
+
+These methods were applied retrospectively. For a series of years up to the most recent, the benchmarks and logistic regressions were calculated with all years up to that year. This was done for all successive years to see how the LRP (and benchmarks, and underlying stock-recruit parameters) would have changed over time as more data was collected.
 
 Due to poor logistic model fits using the entire 19xx - 2018 time series for both Sgen and percentile benchmarks, we did not conduct retrospective analyses for this SMU. The underlying data characteristics that lead to poor logsitic model fits are highlighted in the results section below.
 
@@ -292,16 +296,46 @@ Figure of decision tree?
 
 ### LRPs based on SMU aggregate abundance and logistic models
 
-The logistic models predicting whether all CUs were above their benchmark based on aggregate abundance fit the data poorly ()
 
-```{r chum-logistic-Sgen, fig.cap="Logistic regression of whether escapement of all component CUs were above their $S_{gen}$ benchmarks based on aggregate abundance, for Inside South Coast Chum SMU.", warning=FALSE, echo=FALSE, fig.align="center"}
+The logistic models predicting whether all CUs were above their benchmark based on aggregate abundance fit the data poorly (Figures \@ref(fig:chum-logistic-sgen), \@ref(fig:chum-logistic-perc)). In both cases, the sum of abundance for all CUs in a given year was not a good predictor of whether those CUs were above their benchmarks in that year. Note that these regressions used the aggregate abundance of only the CUs used in the regressions, and excluded the other CUs. 
+
+Highlight low covariance and differences in scale, and describe how these make empirical LRPs unsuitable for this SMU
+
+Why? The Inside South Coast Chum SMu is made up of seven CUs that vary in their escapement abundance. George Strait and Howe Sound-Burrard Inlet have escapement in many years that are greater than the other CUs by two orders of magnitude. In addition, the correlation in escapement among these seven CUs is low. These characteristics mean that the aggregate abundance may be high due to one or more CUs with high escapements being high, while one more smaller escapements is below its benchmark. High aggregate escapements do not mean that all CUs are above their benchmark. This makes sense because:
+
+- Large geographical range of SMU / component CUs
+- Lots of different populations
+- Differences in productivity among CUs/populations
+
+Sumamrise diagnostics (poor)
+
+
+```{r chum-logistic-Sgen, fig.cap="Logistic regression of whether escapement of all component CUs were above their $S_{gen}$ benchmarks based on aggregate abundance, for Inside South Coast Chum SMU. Includes the 5 CUs without CU-level infilling (no Bute Inlet or Upper Knight)", warning=FALSE, echo=FALSE, fig.align="center"}
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/SCChumStudy/Figures/AnnualRetrospective/Bern.IndivRicker_NoSurv_noCUinfill_90/LogisticMod_2010.pdf', './figure/chum-logistic-sgen.pdf', mode="wb")
 knitr::include_graphics(here::here('figure/chum-logistic-sgen.pdf'))
 ```
 
-- Summarize model fit diagnostics
-- Highlight low covariance and differences in scale, and describe how these make empirical LRPs unsuitable for this SMU
-- Also - include plots showing variation in Sgen and percentile benchmarks over time for the 5 CUs to highlight time-varying concerns.
+```{r chum-logistic-perc, fig.cap="Logistic regression of whether escapement of all component CUs were above their percentile benchmarks based on aggregate abundance, for Inside South Coast Chum SMU. Includes CUs where percentile benchmarks were appropriate (no Bute Inlet, Upper Knight, or Southern Coastal Streams)", warning=FALSE, echo=FALSE, fig.align="center"}
+download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/SCChumStudy/Figures/AnnualRetrospective/Bern.Percentile_noCUinfill_90/LogisticMod_2018.pdf', './figure/chum-logistic-perc.pdf', mode="wb")
+knitr::include_graphics(here::here('figure/chum-logistic-perc.pdf'))
+```
+
+Also - include plots showing variation in Sgen and percentile benchmarks over time for the 5 CUs to highlight time-varying concerns.
+
+```{r chum-a-b-retro, fig.cap="Retrospective estimates of alpha and beta for five CUs in the Inside South Coast Chum SMU.", warning=FALSE, echo=FALSE, fig.align="center"}
+download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/SCChumStudy/Figures/fig_a_b_annual_retro.png', './figure/chum-a-b-retro.png',  mode="wb")
+knitr::include_graphics(here::here('figure/chum-a-b-retro.png'))
+```
+
+```{r chum-sgen-retro, fig.cap="Retrospective estimates of $S_{gen}$ for five CUs in the Inside South Coast Chum SMU.", warning=FALSE, echo=FALSE, fig.align="center"}
+download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/SCChumStudy/Figures/fig_Sgen_annual_retro.png', './figure/chum-sgen-retro.png', mode="wb")
+knitr::include_graphics(here::here('figure/chum-sgen-retro.png'))
+```
+
+```{r chum-perc-retro, fig.cap="Escapements of four CUs in the Inside South Coast Chum SMU, with 25th and 50th percentile benchmarks (calculated retrospectively). Green and red points indicate status above or below benchmark, respectively.", warning=FALSE, echo=FALSE, fig.align="center"}
+download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/SCChumStudy/Figures/fig_perc_benchmarks_annual_retro.png', './figure/chum-perc-retro.png', mode="wb")
+knitr::include_graphics(here::here('figure/chum-perc-retro.png'))
+```
 
 ### PROJECTED LRPS (TBD)
 
